--- a/static/styles.css
+++ b/static/styles.css
@@ -1582,6 +1582,14 @@ header {
 
 /* Pop Up Window Styling */
 
+.main-title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+
 .main-title {
   font-size: 2.5rem;
   font-family: 'Lobster', cursive;
@@ -1605,6 +1613,13 @@ header {
   }
 }
 
+.title-separator {
+  width: 100%;
+  height: 3px;
+  background-color: var(--spotifyGreen);
+  margin-top: 10px; /* Add margin-top to separate the title and line */
+  margin-bottom: 0; /* Remove the margin-bottom to eliminate extra space */
+}
 .info-icon {
   cursor: pointer;
   margin-left: 0.5rem;
@@ -1715,7 +1730,7 @@ header {
 }
 
 
-.section p, .example-line {
+.section p {
   text-align: center;
   padding: 1rem;
   border: 1px solid #ccc;
@@ -1730,10 +1745,23 @@ header {
   align-items: center;
 }
 
-.section-content p, .example-line {
+.section-content p {
   margin: 1rem 0;
 }
 
+.section-title {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  color: #fff;
+}
+
+.section p {
+  display: none; /* Hide the <p> elements by default */
+}
+
+.popup-section-content .section-title + p {
+  display: block; /* Display the <p> element when its section is active */
+}
 
 /* Pop Up window styling end */
 
@@ -2121,7 +2149,7 @@ header {
 }
 
 
-.section p {
+.section p, .example-line {
   text-align: center;
   padding: 1rem;
   border: 1px solid #ccc;
