--- a/static/styles.css
+++ b/static/styles.css
@@ -92,7 +92,9 @@ header {
 
 
 .title {
-  font-family: 'Lobster', cursive;
+  /* font-family: 'Lobster', cursive; */
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
   font-size: 4rem;
   color: white;
   display: flex;
