--- a/static/styles.css
+++ b/static/styles.css
@@ -70,8 +70,7 @@ header {
 
 
 .title {
-  /* font-family: 'Lobster', cursive; */
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lobster', cursive;
   font-weight: bold;
   font-size: 4rem;
   color: white;
