--- a/static/styles.css
+++ b/static/styles.css
@@ -1137,6 +1137,8 @@ header {
 
 #prompt-input-container{
   padding: 1.5rem;
+  padding-top: 2rem;
+  padding-bottom: 2.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1705,6 +1707,7 @@ header {
   box-sizing: border-box;
   color: #1DB954;
   border-radius: 15px;
+  border: 2px solid white;
   box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.5);
 }
 
@@ -1712,6 +1715,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: white;
 }
 
 .modal-button {
@@ -1723,6 +1727,16 @@ header {
   cursor: pointer;
   font-weight: bold;
   margin-top: 20px;
+}
+
+.modal-button:hover{
+  background-color: gold;
+  color: black;
+}
+
+.modal-button:active{
+  background-color: white;
+  color: black;
 }
 
 /* Error modal styling end */
