--- a/static/styles.css
+++ b/static/styles.css
@@ -365,10 +365,11 @@ header {
   background-color: #242424;
   border-radius: 10px;
   margin-bottom: 1.5rem;
-  padding: 20px;
+  padding: 2rem;
   width: 75%;
   box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
   font-size: .9rem;
+  color: #cecece;
 }
 
 .option {
@@ -562,6 +563,19 @@ header {
   color: white;
   /* border-bottom: 1px dotted var(--spotifyGreen); */
   transition: 0.35s
+}
+
+.create-header{
+  width: 75%;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 3rem;
+  padding-right: 1rem;
+  margin-bottom: .75rem;
+  padding-bottom: 0;
+  color: gold;
+  text-shadow: 1px 1px 10px rgb(5, 5, 5);
+  /* background-color: #171717; */
 }
 
 /* .disc-thumb-name{
@@ -907,12 +921,13 @@ header {
 .example-prompts-title-container{
   /* border: 1px solid blue; */
   width: 100%;
-  margin-top: 2rem;
+  margin-top: 1.75rem;
   margin-bottom: 1rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-left: 1.75rem;
   font-size: 1.5rem;
-  color: gold;
+  color: #cecece;
 }
 
 .example-prompts-title {
@@ -1142,10 +1157,10 @@ header {
   padding: 10px;
   border-radius: 5px;
   border: 1px solid transparent;
-  background-color: #404040;
-  color: #fff;
+  background-color: #cecece;
+  color: #121212;
   font-family: 'Montserrat', sans-serif;
-  font-size: .75rem;
+  font-size: .8rem;
 }
 
 .prompt-input:focus {
@@ -1164,6 +1179,7 @@ header {
   color: var(--spotifyGreen);
   font-size: .85rem;
   margin-bottom: .25rem;
+  padding-left: .25rem;
 }
 
 .prompt-input-right-inner{
@@ -1178,11 +1194,11 @@ header {
 }
 
 .prompt-track-count{
-  height: 27px;
+  height: 28px;
   border: 0;
   border-radius: 5px;
-  background-color: #404040;
-  color: white;
+  background-color: #cecece;
+  color: #121212;
   padding-left: .25rem;
   margin-right: .25rem;
   font-size: .75rem;
@@ -2037,7 +2053,7 @@ header {
 
 @media screen and (max-width: 1305px) {
 
-  .pl-thumb{
+  .pl-thumb, .create-header{
     width: 60%;
   }
 
@@ -2061,7 +2077,7 @@ header {
 
 @media screen and (max-width: 1225px) {
 
-  .pl-thumb{
+  .pl-thumb, .create-header{
     width: 67.5%;
   }
 
@@ -2069,7 +2085,7 @@ header {
 
 @media screen and (max-width: 1150px) {
 
-  .pl-thumb{
+  .pl-thumb, .create-header{
     width: 75%;
   }
 
@@ -2105,7 +2121,7 @@ header {
     flex: 1.7
   }
 
-  .pl-thumb{
+  .pl-thumb, .create-header{
     width: 85%;
   }
 
@@ -2652,7 +2668,7 @@ header {
   text-align: left;
   font-size: .8rem;
   /* text-align: justify; */
-  color: rgb(206, 206, 206);
+  color: #cecece;
   line-height: 1.35;
   margin-top: .5rem;
 }
