--- a/static/styles.css
+++ b/static/styles.css
@@ -2652,7 +2652,8 @@ header {
 .how-it-works{
   font-size: 2.5rem;
   text-shadow: 1px 1px 10px rgb(5, 5, 5);
-  margin-bottom: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .feature-header{
