--- a/static/styles.css
+++ b/static/styles.css
@@ -623,7 +623,7 @@ header {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
 }
 
-.separator-container{
+.separator-container, .landing-separator-container{
   display: none;
   justify-content: center;
 }
@@ -631,6 +631,12 @@ header {
 .separator{
   width: 85%;
   border: 1px solid #242424;
+}
+
+.landing-separator{
+  width: 90%;
+  margin-top: 3rem;
+  border: .25px solid #555555;
 }
 
 .pl-thumb-tracks{
@@ -2077,6 +2083,23 @@ header {
   line-height: .85;
 }
 
+.create-only{
+  display: block;
+}
+
+.amazing-only{
+  color: gold;
+  display: block;
+}
+
+.ai-generated-only{
+  display: block;
+}
+
+.playlists-only{
+  display: block;
+}
+
 .features-section {
   display: flex;
   justify-content: space-around;
@@ -2112,7 +2135,7 @@ header {
   padding: 0.5rem 1rem;
   border-radius: 8px;
   border: none;
-  width: 20vw;
+  width: 30%;
   text-align: center;
   height: auto;
   font-size: 1.2rem;
@@ -2164,366 +2187,6 @@ header {
 }
 
 /* Landing Page Styles End */
-
-
-/* RE-SIZING */
-
-@media screen and (max-width: 1450px) {
-
-  .pl-thumb-name, .disc-thumb-name{
-    font-size: 2.25rem;
-  }
-
-}
-
-@media screen and (max-width: 1350px) {
-
-  .landing-header{
-    font-size: 4.5rem;
-  }
-}
-
-@media screen and (max-width: 1305px) {
-
-  .pl-thumb, .create-header{
-    width: 60%;
-  }
-
-  #pl-container, #successfulpl-container{
-    width: 100%;
-  }
-
-  .pro-option{
-    width: 65%
-  }
-
-  .pl-thumb-name, .disc-thumb-name{
-    font-size: 2rem;
-  }
-
-  .pl-thumb-tracks div{
-    font-size: .8rem;
-  }
-
-}
-
-@media screen and (max-width: 1240px) {
-
-  .landing-header{
-    font-size: 4rem;
-  }
-}
-
-@media screen and (max-width: 1225px) {
-
-  .pl-thumb, .create-header{
-    width: 67.5%;
-  }
-
-}
-
-@media screen and (max-width: 1150px) {
-
-  .pl-thumb, .create-header{
-    width: 75%;
-  }
-
-  .pl-thumb-img{
-    flex: 1;
-  }
-
-  .pl-thumb-tracks{
-    flex: 3
-  }
-
-  .pro-option{
-    width: 70%;
-  }
-
-}
-
-@media screen and (max-width: 980px) {
-  .prompt-input-left{
-    flex: 1.7
-  }
-}
-
-/* @media screen and (max-width: 935px) {
-  .prompt-input-left{
-    flex: 1.5
-  }
-} */
-
-@media screen and (max-width: 945px) {
-
-  .prompt-input-left{
-    flex: 1.7
-  }
-
-  .pl-thumb, .create-header{
-    width: 85%;
-  }
-
-  .pro-option{
-    width: 75%;
-  }
-
-  .options-title{
-    font-size: 1.75rem;
-  }
-  
-}
-
-@media screen and (max-width: 831px) {
-  .try-again{
-    padding-top: 1rem;
-    padding-bottom: 2.5rem;
-  }
-}
-
-@media screen and (max-width: 825px) {
-  .prompt-input-left{
-    flex: 1.5
-  }
-}
-
-@media screen and (max-width: 800px) {
-
-  .pro-option {
-    font-size: .85rem;
-  }
-  
-  .pl-thumb-name, .disc-thumb-name{
-    font-size: 2rem;
-  }
-  
-  .pro-option{
-    width: 80%;
-  }
-  
-}
-
-@media screen and (max-width: 770px) {
-
-  .prompt-input-left{
-    flex: 1.4
-  }
-  
-  .pl-thumb-data-container{
-    flex-direction: column;
-  }
-
-  .pl-thumb-tracks{
-    flex: 1;
-    padding-left: 1.75rem;
-    padding-bottom: 2rem;
-  }
-
-  .pl-thumb-tracks div{
-    font-size: .75rem;
-  }
-
-  .separator-container{
-    display: flex;
-  }
-
-  .pl-thumb-name, .disc-thumb-name{
-    font-size: 1.75rem;
-  }
-  
-  .profstats div{
-    font-size: .9rem;
-  }
-
-  .playlist-header{
-    width: 350px
-  }
-
-}
-
-@media screen and (max-width: 750px) {
-  .prompt-input-left{
-    flex: 1.3
-  }
-}
-
-@media screen and (max-width: 710px) {
-  .prompt-input-left{
-    flex: 1
-  }
-
-  .playlist-header{
-    width: 300px
-  }
-}
-
-@media screen and (max-width: 650px) {
-
-  #prompt-input-container{
-    flex-direction: column;
-  }
-
-  .prompt-input-left, .prompt-input-right{
-    flex: 1;
-    width: 100%;
-    margin-right: 0;
-  }
-
-  .prompt-input-right{
-    margin-top: .75rem;
-    justify-content: center;
-  }
-
-  .create-playlist-button-container{
-    padding-top: .75rem;
-    margin-left: .75rem;
-  }
-
-  .title{
-    font-size: 3.15rem;
-  }
-
-  .pl-thumb-name, .disc-thumb-name{
-    font-size: 1.5rem;
-  }
-
-  .toggle-button {
-    width: 300px;
-  }
-
-  .playlist-button {
-    width: 300px;
-  }
-
-  .discoverable-title, .playlist-header{
-    font-size: .9rem;
-  }
-
-  .example-prompts-title-container{
-    font-size: 1.25rem;
-  }
-
-  .prompt-options{
-    font-size: .8rem;
-  }
-
-  .pro-option{
-    width: 85%;
-  }
-
-  .options-title{
-    font-size: 1.5rem;
-  }
-
-  .playlist-header{
-    width: 250px
-  }
-  
-}
-
-@media screen and (max-width: 600px) {
-
-}
-
-@media screen and (max-width: 570px) {
-
-  .pl-thumb-name, .disc-thumb-name{
-    font-size: 1.25rem;
-  }
-
-  .pl-thumb-prompt-content{
-    font-size: .7rem;
-  }
-
-  .profstats div{
-    font-size: .8rem;
-  }
-
-  .discoverable-title, .playlist-header{
-    font-size: .8rem;
-  }
-
-  .options-title{
-    font-size: 1.25rem;
-  }
-
-  .pro-option{
-    font-size: .75rem;
-  }
-
-  .tracks-to-include{
-    font-size: .65rem;
-  }
-
-  .playlist-header{
-    width: 200px;
-    margin-left: 0;
-    height: 22px;
-  }
-
-  .aiplaylist-name-left{
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .aiplaylist-name-content{
-    margin-top: .25rem;
-  }
-  
-}
-
-@media screen and (max-width: 500px) {
-  .title{
-    font-size: 3.15rem;
-  }
-
-  /* .pl-thumb-name{
-    font-size: 1.1rem;
-  } */
-
-  .pl-thumb-tracks div{
-    font-size: .7rem;
-    max-width: 300px;
-  }
-
-  .pl-thumb-user-name, .disc-thumb-user-name{
-    font-size: .8rem;
-  }
-
-  .profstats div{
-    font-size: .7rem;
-  }
-
-  .discoverable-title, .playlist-header{
-    font-size: .7rem;
-  }
-
-  .prompt-options{
-    font-size: .65rem;
-  }
-  
-  .prompt-input-right{
-    justify-content: space-between;
-  }
-
-  .create-playlist-button{
-    padding-left: 2.15rem;
-    padding-right: 2.15rem;
-    font-size: .75rem
-  }
-}
-
-@media screen and (max-width: 415px) {
-
-.aitracklist-left, .aiplaylist-name-left{
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-/* .tracks-to-include{
-  margin-left: 0;
-} */
-}
 
 
 /* Add media query for small screens */
@@ -2732,6 +2395,9 @@ header {
 /* How It Works Section Styles */
 
 .how-it-works-section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   padding-right: 3rem;
   text-align: center;
   color: white;
@@ -2748,6 +2414,7 @@ header {
   border: 1px solid transparent;
 }
 
+
 .step h3 {
   color: var(--spotifyGreen);
   margin-bottom: 10px;
@@ -2758,6 +2425,11 @@ header {
   cursor: default;
 }
 
+.step-number{
+  color: var(--spotifyGreen);
+  margin-right: .5rem;
+}
+
 @media (max-width: 768px) {
   .step {
     width: 100%;
@@ -2765,3 +2437,643 @@ header {
 }
 
 /* How It Works Section Styles End */
+
+/* RE-SIZING */
+
+@media screen and (max-width: 1450px) {
+
+  .pl-thumb-name, .disc-thumb-name{
+    font-size: 2.25rem;
+  }
+
+}
+
+@media screen and (max-width: 1350px) {
+
+  .landing-header{
+    font-size: 4.5rem;
+  }
+}
+
+@media screen and (max-width: 1305px) {
+
+  .pl-thumb, .create-header{
+    width: 60%;
+  }
+
+  #pl-container, #successfulpl-container{
+    width: 100%;
+  }
+
+  .pro-option{
+    width: 65%
+  }
+
+  .pl-thumb-name, .disc-thumb-name{
+    font-size: 2rem;
+  }
+
+  .pl-thumb-tracks div{
+    font-size: .8rem;
+  }
+
+}
+
+@media screen and (max-width: 1240px) {
+
+  .landing-header{
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 1225px) {
+
+  .pl-thumb, .create-header{
+    width: 67.5%;
+  }
+
+}
+
+@media screen and (max-width: 1150px) {
+
+  .pl-thumb, .create-header{
+    width: 75%;
+  }
+
+  .pl-thumb-img{
+    flex: 1;
+  }
+
+  .pl-thumb-tracks{
+    flex: 3
+  }
+
+  .pro-option{
+    width: 70%;
+  }
+
+  .landing-left-container{
+    flex: 1.25
+  }
+
+  .feature-header{
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (max-width: 1025px) {
+
+  .landing-left-container{
+    text-align: center;
+    flex: 1;
+  }
+
+  .landing{
+    flex-direction: column;
+  }
+
+  .landing-header{
+    line-height: 1.2;
+    margin-bottom: -1rem;
+  }
+
+  .amazing-only, .create-only{
+    display: inline;
+  }
+
+  .amazing-only{
+    margin-left: 1rem;
+  }
+
+  .ai-generated-playlists{
+    display: block;
+  }
+  
+  .ai-generated-only{
+    display: inline;
+  }
+
+  .playlists-only{
+    display: inline;
+    margin-left: 1rem;
+  }
+
+  .landing-separator-container{
+    display: flex;
+  }
+
+  .how-it-works-section{
+    align-items: center;
+    padding-right: 0;
+  }
+
+  .steps-container{
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    padding-top: 0;
+    margin-top: .75rem;
+    /* border: 1px solid yellow; */
+  }
+
+  .step{
+    flex: 1;
+    margin: 1rem;
+    margin-top: 0;
+  }
+
+  .how-it-works{
+    margin-top: 2.5rem;
+    font-size: 3rem;
+  }
+
+  .feature-header{
+    font-size: .75rem;
+    display: block;
+  }
+
+  .step-number{
+    display: block;
+    text-align: left;
+    font-size: 2rem;
+    margin-bottom: .5rem;
+  }
+
+  .step-title{
+    display: block;
+    text-align: left;
+    font-weight: 600;
+    margin-bottom: 1.5rem;
+  }
+
+  .step-colon{
+    display: none;
+  }
+
+}
+
+@media screen and (max-width: 980px) {
+  .prompt-input-left{
+    flex: 1.7
+  }
+}
+
+/* @media screen and (max-width: 935px) {
+  .prompt-input-left{
+    flex: 1.5
+  }
+} */
+
+@media screen and (max-width: 945px) {
+
+  .prompt-input-left{
+    flex: 1.7
+  }
+
+  .pl-thumb, .create-header{
+    width: 85%;
+  }
+
+  .pro-option{
+    width: 75%;
+  }
+
+  .options-title{
+    font-size: 1.75rem;
+  }
+  
+}
+
+@media screen and (max-width: 915px) {
+
+  .steps-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 4rem;
+    padding-top: 0;
+    margin-top: .75rem;
+    /* border: 1px solid yellow; */
+  }
+
+  .feature-header{
+    justify-content: flex-start;
+  }
+
+  .how-it-works-section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+  }
+  
+  .step {
+    background-color: #171717;
+    /* border: 1px solid #777777; */
+    border-radius: 10px;
+    margin: 1rem auto;
+    margin-top: 0;
+    padding: 2rem;
+    width:100%;
+    box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid transparent;
+  }
+  
+  
+  .step h3 {
+    color: var(--spotifyGreen);
+    margin-bottom: 10px;
+  }
+  
+  .step:hover{
+    border: 1px solid var(--spotifyGreen);
+    cursor: default;
+  }
+  
+  .step-num-title{
+    display: flex;
+    justify-content: flex-start;
+  }
+  
+  .step-number{
+    color: var(--spotifyGreen);
+    margin-right: .5rem;
+    display: inline;
+    font-size: 1.25rem;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  .step-colon{
+    display: inline;
+  }
+
+  .step-title{
+    display: inline;
+    font-size: 1.25rem;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 905px) {
+  .landing-header{
+    font-size: 3.5rem;
+    margin-bottom: -1.5rem;
+  }
+}
+
+@media screen and (max-width: 831px) {
+  .try-again{
+    padding-top: 1rem;
+    padding-bottom: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 825px) {
+  .prompt-input-left{
+    flex: 1.5
+  }
+}
+
+@media screen and (max-width: 800px) {
+
+  .pro-option {
+    font-size: .85rem;
+  }
+  
+  .pl-thumb-name, .disc-thumb-name{
+    font-size: 2rem;
+  }
+  
+  .pro-option{
+    width: 80%;
+  }
+
+  .landing-header{
+    font-size: 3rem;
+  }
+  
+}
+
+@media screen and (max-width: 770px) {
+
+  .prompt-input-left{
+    flex: 1.4
+  }
+  
+  .pl-thumb-data-container{
+    flex-direction: column;
+  }
+
+  .pl-thumb-tracks{
+    flex: 1;
+    padding-left: 1.75rem;
+    padding-bottom: 2rem;
+  }
+
+  .pl-thumb-tracks div{
+    font-size: .75rem;
+  }
+
+  .separator-container{
+    display: flex;
+  }
+
+  .pl-thumb-name, .disc-thumb-name{
+    font-size: 1.75rem;
+  }
+  
+  .profstats div{
+    font-size: .9rem;
+  }
+
+  .playlist-header{
+    width: 350px
+  }
+
+}
+
+@media screen and (max-width: 750px) {
+  .prompt-input-left{
+    flex: 1.3
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .prompt-input-left{
+    flex: 1
+  }
+
+  .playlist-header{
+    width: 300px
+  }
+
+  .landing-header{
+    font-size: 2.7rem;
+  }
+
+  .how-it-works{
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+
+  #prompt-input-container{
+    flex-direction: column;
+  }
+
+  .prompt-input-left, .prompt-input-right{
+    flex: 1;
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .prompt-input-right{
+    margin-top: .75rem;
+    justify-content: center;
+  }
+
+  .create-playlist-button-container{
+    padding-top: .75rem;
+    margin-left: .75rem;
+  }
+
+  .title{
+    font-size: 3.15rem;
+  }
+
+  .pl-thumb-name, .disc-thumb-name{
+    font-size: 1.5rem;
+  }
+
+  .toggle-button {
+    width: 300px;
+  }
+
+  .playlist-button {
+    width: 300px;
+  }
+
+  .discoverable-title, .playlist-header{
+    font-size: .9rem;
+  }
+
+  .example-prompts-title-container{
+    font-size: 1.25rem;
+  }
+
+  .prompt-options{
+    font-size: .8rem;
+  }
+
+  .pro-option{
+    width: 85%;
+  }
+
+  .options-title{
+    font-size: 1.5rem;
+  }
+
+  .playlist-header{
+    width: 250px
+  }
+
+  .landing-left-container{
+    text-align: left;
+  }
+
+  .landing-header{
+    line-height: .85;
+    margin-bottom: 0;
+  }
+
+  .amazing-only, .create-only{
+    display: block;
+  }
+
+  .amazing-only{
+    margin-left: 0;
+  }
+
+  .ai-generated-only{
+    display: block;
+  }
+
+  .playlists-only{
+    display: block;
+    margin-left: 0
+  }
+
+  .landing-header{
+    font-size: 4rem;
+  }
+
+  .get-started{
+    width: 45%;
+  }
+
+  .steps-container{
+    /* border: 1px solid yellow; */
+    padding: 1rem;
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 585px) {
+
+  .landing-header{
+    font-size: 3.5rem;
+  }
+
+
+  .step-title, .step-number{
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (max-width: 570px) {
+
+  .pl-thumb-name, .disc-thumb-name{
+    font-size: 1.25rem;
+  }
+
+  .pl-thumb-prompt-content{
+    font-size: .7rem;
+  }
+
+  .profstats div{
+    font-size: .8rem;
+  }
+
+  .discoverable-title, .playlist-header{
+    font-size: .8rem;
+  }
+
+  .options-title{
+    font-size: 1.25rem;
+  }
+
+  .pro-option{
+    font-size: .75rem;
+  }
+
+  .tracks-to-include{
+    font-size: .65rem;
+  }
+
+  .playlist-header{
+    width: 200px;
+    margin-left: 0;
+    height: 22px;
+  }
+
+  .aiplaylist-name-left{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .aiplaylist-name-content{
+    margin-top: .25rem;
+  }
+  
+}
+
+@media screen and (max-width: 530px) {
+
+  .landing-header{
+    font-size: 3rem;
+  }
+
+  .how-it-works{
+    font-size: 2.25rem;
+  }
+  
+}
+
+@media screen and (max-width: 500px) {
+  .title{
+    font-size: 3.15rem;
+  }
+
+  /* .pl-thumb-name{
+    font-size: 1.1rem;
+  } */
+
+  .pl-thumb-tracks div{
+    font-size: .7rem;
+    max-width: 300px;
+  }
+
+  .pl-thumb-user-name, .disc-thumb-user-name{
+    font-size: .8rem;
+  }
+
+  .profstats div{
+    font-size: .7rem;
+  }
+
+  .discoverable-title, .playlist-header{
+    font-size: .7rem;
+  }
+
+  .prompt-options{
+    font-size: .65rem;
+  }
+  
+  .prompt-input-right{
+    justify-content: space-between;
+  }
+
+  .create-playlist-button{
+    padding-left: 2.15rem;
+    padding-right: 2.15rem;
+    font-size: .75rem
+  }
+}
+
+@media screen and (max-width: 415px) {
+
+.aitracklist-left, .aiplaylist-name-left{
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.hero-section{
+  padding: 2rem;
+}
+
+.get-started{
+  width: 60%;
+}
+
+.landing-header{
+  font-size: 2.5rem;
+}
+
+.how-it-works{
+  font-size: 1.75rem;
+}
+
+.step-number{
+  font-size: .8rem;
+}
+
+.step-title{
+  display: flex;
+  align-items: center;
+  font-size: .7rem;
+}
+
+.p-landing{
+  font-size: .65rem;
+}
+
+/* .tracks-to-include{
+  margin-left: 0;
+} */
+}
