--- a/static/styles.css
+++ b/static/styles.css
@@ -357,7 +357,7 @@ header {
 .options-title {
   margin-top: 1.75rem;
   margin-bottom: 2rem;
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-shadow: 1px 1px 10px rgb(5, 5, 5);
 }
 
@@ -2640,7 +2640,7 @@ header {
   }
 
   .options-title{
-    font-size: 1.75rem;
+    font-size: 2.25rem;
   }
   
 }
@@ -2770,7 +2770,7 @@ header {
 
   .pl-thumb-tracks{
     flex: 1;
-    padding-left: 1.75rem;
+    padding-left: 2rem;
     padding-bottom: 2rem;
   }
 
@@ -2792,6 +2792,10 @@ header {
 
   .playlist-header{
     width: 350px
+  }
+
+  .options-title{
+    font-size: 2rem;
   }
 
 }
@@ -2875,7 +2879,7 @@ header {
   }
 
   .options-title{
-    font-size: 1.5rem;
+    font-size: 1.85rem;
   }
 
   .playlist-header{
@@ -2955,7 +2959,7 @@ header {
   }
 
   .options-title{
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
 
   .pro-option{
@@ -3071,6 +3075,10 @@ header {
 
 .p-landing{
   font-size: .65rem;
+}
+
+.options-title{
+  font-size: 1.25rem;
 }
 
 /* .tracks-to-include{
