--- a/static/styles.css
+++ b/static/styles.css
@@ -243,6 +243,10 @@ header {
   margin-top: .75rem;
 }
 
+.dropdown-about{
+  display: none;
+}
+
 .dropdown.visible .dropdown-content {
   display: block;
 }
@@ -459,6 +463,7 @@ header {
   width: 400px;
   border-radius: 10px;
   overflow: hidden;
+  margin-top: 1.75rem;
 }
 
 .toggle-option {
@@ -649,6 +654,9 @@ header {
   mask: linear-gradient(#000, #0000);
   background-color: 121212;
   border-top-right-radius: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   /* mix-blend-mode: hard-light; */
 }
 
@@ -2595,6 +2603,10 @@ header {
     margin-top: 0;
   }
 
+  .step:last-child{
+    margin-bottom: 3rem;
+  }
+
   .how-it-works{
     margin-top: 2.5rem;
     font-size: 3rem;
@@ -2810,6 +2822,14 @@ header {
     font-size: 2rem;
   }
 
+  .info-icon-container{
+    display: none;
+  }
+
+  .dropdown-about{
+    display: inline;
+  }
+
 }
 
 @media screen and (max-width: 750px) {
@@ -2937,6 +2957,11 @@ header {
     padding: 1rem;
     padding-top: 0;
   }
+
+  .create-header{
+    font-size: 2.5rem;
+    padding-right: .5rem;
+  }
 }
 
 @media screen and (max-width: 585px) {
@@ -3050,6 +3075,10 @@ header {
     padding-right: 2.15rem;
     font-size: .75rem
   }
+
+  .create-header{
+    font-size: 2rem;
+  }
 }
 
 @media screen and (max-width: 415px) {
@@ -3091,6 +3120,10 @@ header {
 
 .options-title{
   font-size: 1.25rem;
+}
+
+.title{
+  margin-left: .25rem;
 }
 
 /* .tracks-to-include{
