--- a/static/styles.css
+++ b/static/styles.css
@@ -3196,17 +3196,17 @@ header {
 }
 
 .step-number{
-  font-size: .8rem;
+  font-size: 1rem;
 }
 
 .step-title{
   display: flex;
   align-items: center;
-  font-size: .7rem;
+  font-size: .9rem;
 }
 
 .p-landing{
-  font-size: .65rem;
+  font-size: .8rem;
 }
 
 .options-title{
@@ -3227,4 +3227,5 @@ header {
   .landing-header{
     font-size: 2.15rem;
   }
+  
 }
